# wordcloud2tester

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  dev_server.py  docker-compose.yml  i18n-translations.js  index.html  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/workflows/: ci-cd.yml
api/: path-expand.py  pyproject.toml
config/: vercel.json
docs/: DEPLOY_GUIDE.md  README.md
docs/superpowers/plans/: 2026-07-01-emergence-engine.md
docs/superpowers/specs/: 2026-07-01-emergence-engine-design.md
frontend/: index.html
frontend/models/: knowledge_graph.py
src/wordcloud_emergence/: __init__.py  path-expand.py  test.py
tests/: test_emergence.py  test_wordcloud_emergence.py
