[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordcloud-emergence"
version = "1.0.0"
description = "GAT-Powered Semantic Network Exploration - Between two concepts, find the third that doesn't yet exist"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "hazelian0619", email = "hazelian0619@example.com"},
]
maintainers = [
    {name = "hazelian0619", email = "hazelian0619@example.com"},
]
keywords = ["wordcloud", "semantic", "ai", "graph", "creativity", "exploration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "Flask==2.2.5",
    "openai==0.28.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "torch==2.0.1",
    "torch-geometric==2.3.1",
    "transformers==4.35.2",
    "scikit-learn==1.3.0",
    "aiohttp==3.8.6",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.7",
    "prometheus-client==0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.7.0",
    "flake8==6.0.0",
    "mypy==1.5.1",
    "pre-commit==3.5.0",
    "coverage==7.3.0",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
]

[project.urls]
Homepage = "https://github.com/hazelian0619/wordcloud2tester"
Repository = "https://github.com/hazelian0619/wordcloud2tester"
Documentation = "https://github.com/hazelian0619/wordcloud2tester#readme"
Issues = "https://github.com/hazelian0619/wordcloud2tester/issues"
Changelog = "https://github.com/hazelian0619/wordcloud2tester/blob/main/CHANGELOG.md"

[project.scripts]
wordcloud-emergence = "wordcloud_emergence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]